# MCSite-Update

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
admin/: cli.py
alembic/: env.py
alembic/versions/: 0f6fec801856_initial_schema.py
api/: pyproject.toml
app/: main.py
app/core/: config.py
app/repositories/: release_repo.py
app/routers/: api_v1.py
app/schemas/: request.py  response.py
app/services/: semver_utils.py  version_check.py
site/: install.php
site/admin/: index.html
site/admin/api/: gallery.php  index.php  media.php  posts.php  settings.php  update.php
site/admin/js/: app.js
site/api/: fix-migrations.php  site-info.php
site/core/: Migration.php  Updater.php  Upload.php  Version.php
site/migrations/: 003_uploaded_files.sql
site/themes/starter/: index.html
site/themes/starter-mocha/: index.html
tests/: conftest.py  test_api.py  test_version_check.py
update.mc.yunaitang.top/: README.md  alembic.ini
update.mc.yunaitang.top/admin/: cli.py
update.mc.yunaitang.top/alembic/: env.py
update.mc.yunaitang.top/alembic/versions/: 7cb766ea502a_add_users_and_audit_logs.py
update.mc.yunaitang.top/app/: main.py
update.mc.yunaitang.top/app/core/: database.py
update.mc.yunaitang.top/app/models/: user.py  (+2 more)
update.mc.yunaitang.top/deploy/: DEPLOY.md  mcsite-update.service
update.mc.yunaitang.top/docs/: api-contract.md
update.mc.yunaitang.top/tests/: conftest.py  test_admin_api_auth.py  test_api.py  test_version_check.py
web/static/: style.css
web/templates/: base.html.j2  login.html.j2
(+27 files in other folders)
