[project]
name = "mc-yunaitang-top"
version = "0.3.0"
description = "MC Launcher Version Update Check Service"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "click>=8.4.2",
    "fastapi>=0.138.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "semver>=3.0.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0",
]
